--- a/pom.xml
+++ b/pom.xml
@@ -57,20 +57,27 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http:/
 
 <build>
  <plugins>
+            <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-resources-plugin</artifactId>
+      <version>3.2.0</version>
+    </plugin>
 <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
-       <plugin>
-
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
+   
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.1</version>
       <configuration>
-                <source>7</source>
-                 <target>1.7</target>
-             </configuration>
-
-        </plugin>
+   <source>1.8</source>
+  <target>1.8</target>
+  <encoding>UTF-8</encoding>   
+      </configuration>
+    </plugin>        
+</plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
